fix button spacing

--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -111,9 +111,6 @@
     @apply font-semibold;
   }
 
-  main p {
-    @apply pb-3;
-  }
 
   main ul {
     @apply pb-3;
